# quick-sort

./: CMakeLists.txt  functions.hpp  main.cpp  make.sh
src/: functions.hpp  main.cpp  quicksort.cpp  quicksort.hpp
